fix: resolve text truncation and optimize responsiveness on intermediate screens (#934)

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -531,13 +531,14 @@ a:not([href]):not([class]):hover {
   -webkit-background-clip: text;
   animation: color-shift 8s linear infinite;
 
-  @media (max-width: 768px) {
-    font-size: 3.5rem;
-    text-align: center;
+  @media (max-width: 1200px) {
+    font-size: 4rem;
   }
 
-  // @media (max-width:1200px){
-  // }
+  @media (max-width: 768px) {
+    font-size: 3rem;
+    text-align: center;
+  }
 }
 
 @keyframes color-shift {
@@ -616,17 +617,21 @@ a:not([href]):not([class]):hover {
   text-align: right;
 
   h1.dashboard {
-    max-width: 40%;        
+    max-width: 70%;        
     text-align: left;
-    flex-shrink: 0;       
+    flex-shrink: 0;
+    @media (max-width: 1200px) {
+      max-width: 60%;
+    }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1100px) {
     flex-wrap: wrap;
     justify-content: center;
+    text-align: center;
 
     h1.dashboard {
-      max-width: 100%;
+      max-width: 100% !important;
       text-align: center;
     }
   }
@@ -651,7 +656,7 @@ a:not([href]):not([class]):hover {
       color: #EBC017;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 1100px) {
       margin: 2rem 0 0 0;
     }
   }
